# lean-image

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: fs.json  path.json
src-tauri/src/: lib.rs  main.rs
